# autoformat

./: .gitignore  Makefile  README.md  autoformat.sh  autoimporter.sh  pyproject.toml  requirements.txt  setup.py
autoformat/: __init__.py
