[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoformat"
version = "0.0.3"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "autoflake==2.3.1",
  "black==24.10.0",
  "isort==5.13.2",
  "ruff==0.7.1",
  "sqlparse==0.5.1",
  "toml-sort>=0.24.2",
  "typer==0.12.5",
  "yamlfmt>=1.1.1",
]

[project.optional-dependencies]
dev = ["ipdb==0.13.13"]

[project.scripts]
autoformat = "autoformat:main"
